--- a/pom.xml
+++ b/pom.xml
@@ -5,7 +5,7 @@
 	<artifactId>myweb</artifactId>
 	<packaging>war</packaging>
 	<version>8.6.9</version>
-	<name>Java Home myneweb</name>
+	<name>Java Home my web</name>
 	<url>http://maven.apache.org</url>
 	
 	<properties>
